# pytest_grabbag

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/pytest_grabbag/: __init__.py  _dependencies.py  _serde.py  exceptions.py  temp_fs.py  templating.py  tmp_fs.py
tests/: conftest.py  test_dependencies.py  test_temp_fs.py  test_temp_fs_basic.py  test_temp_fs_gen.py  test_temp_fs_serde.py  test_templating.py
tests/copier_templates/simple/: copier.yml
